<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/front_blank_with_logo">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_hor_30_per"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_ver_45_per"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_ver_95_per"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:text="@string/name_with_colon"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_hor_30_per" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/name_here"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/guide_hor_30_per"
        app:layout_constraintTop_toTopOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/ps_can_you"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <EditText
        android:id="@+id/et_nick_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/ps_can_you_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_nick_name"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toTopOf="@id/tv_nick_name" />

    <TextView
        android:id="@+id/tv_child_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/your_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nick_name" />

    <EditText
        android:id="@+id/et_child_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/ten_digit_number_here"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_child_number"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_nick_name"
        app:layout_constraintTop_toTopOf="@id/tv_child_number" />

    <TextView
        android:id="@+id/tv_parent_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/parents_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_child_number" />

    <EditText
        android:id="@+id/et_par_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/ten_digit_number_here"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_parent_number"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_child_number"
        app:layout_constraintTop_toTopOf="@id/tv_parent_number" />

    <TextView
        android:id="@+id/bt_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_parent_number" />

    <TextView
        android:id="@+id/et_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/backgroun_et"
        android:focusable="false"
        android:padding="5dp"
        android:text="@string/dd_mm_yy"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/bt_dob"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_par_number"
        app:layout_constraintTop_toTopOf="@id/bt_dob" />

    <ImageView
        android:id="@+id/calender_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/calender"
        app:layout_constraintBottom_toBottomOf="@id/et_DOB"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toEndOf="@id/et_DOB"
        app:layout_constraintTop_toTopOf="@id/et_DOB" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_DOB" />

    <Spinner
        android:id="@+id/spin_Gender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/Gender_options"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@id/tvGender"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toEndOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_ps_nick_name"
        app:layout_constraintTop_toTopOf="@id/tvGender" />

    <TextView
        android:id="@+id/tv_pin_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/area_pincode"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender" />

    <EditText
        android:id="@+id/et_pin_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/six_digit_Pincode_here"
        android:inputType="number"
        android:maxLength="6"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_pin_code"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_DOB"
        app:layout_constraintTop_toTopOf="@id/tv_pin_code" />

    <TextView
        android:id="@+id/tv_ps_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/name_your_ps"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pin_code" />

    <EditText
        android:id="@+id/et_ps_nick_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/backgroun_et"
        android:ems="10"
        android:hint="@string/prakruti_samay"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toStartOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_pin_code"
        app:layout_constraintTop_toTopOf="@id/tv_ps_nick_name" />

    <TextView
        android:id="@+id/tvVolunteer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/become_volunteer"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ps_nick_name" />

    <Spinner
        android:id="@+id/spin_volunteer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/volunteer_options"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="@id/tvVolunteer"
        app:layout_constraintEnd_toStartOf="@id/guide_ver_95_per"
        app:layout_constraintStart_toEndOf="@id/guide_ver_45_per"
        app:layout_constraintTop_toBottomOf="@id/et_ps_nick_name"
        app:layout_constraintTop_toTopOf="@id/tvVolunteer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_hor_75_per"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <Button
        android:id="@+id/btnRegisterasChild_SignIn"
        android:layout_width="0dp"
        android:layout_height="35sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_button_sign_in"
        android:text="@string/create_your_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_hor_75_per"
        app:layout_goneMarginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>